--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@huggingface/inference": "^2.8.1",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
     "@popperjs/core": "^2.11.8",
     "@types/aos": "^3.0.7",
     "@types/socket.io": "^3.0.2",
